--- a/abc.css
+++ b/abc.css
@@ -906,3 +906,51 @@ a {
     font-family: 'Open Sans';
     font-weight: 400;
 }
+.subscribe-icons {
+    margin-top:27px;
+    margin-left:1px;
+}
+.subscribe-icons i {
+    color: white;
+    font-size:16px;
+    border-radius: 25px;
+}
+.subscribe-icons .f{
+    padding: 10px 13px;
+    background-color: #3b5999;
+}
+.subscribe-icons .tw {
+    padding: 10px 10px;
+    background-color: #55acee;
+    margin-left: 4px;
+}
+.subscribe-icons .vk {
+    padding: 10px 11px;
+    background-color: #4c75a3;
+    margin-left: 4px;
+}
+.subscribe-icons .p{
+    padding: 10px 12px;
+    background-color: #ff2e56;
+    margin-left: 4px;
+}
+.subscribe-icons .t{
+    padding: 10px 13px;
+    background-color: #34465d;
+    margin-left: 4px;
+}
+.subscribe-icons .d{
+    padding: 10px 9px;
+    background-color: #ea4c89;
+    margin-left: 4px;
+}
+.tabpost {
+    margin: 40px 0px 0px 41px;
+    font-size: 18px;
+    font-weight: 800;
+    color: rgb(63,81,181);
+}
+.tabpost hr{
+    border-top: 0.5px solid rgb(174, 195, 255);
+    margin: 6px 0px -3px 0px;
+}
