--- a/abc.css
+++ b/abc.css
@@ -293,7 +293,7 @@ a {
 }
 .main-body {
     width:100%;
-    height: 2337px;
+    height: 2340px;
     background-color: rgb(245,245,245);
     display: grid;
     place-items: center;
@@ -945,12 +945,150 @@ a {
     margin-left: 4px;
 }
 .tabpost {
-    margin: 40px 0px 0px 41px;
+    margin: 45px 0px 0px 39px; 
+}
+.tabpost .widget {
     font-size: 18px;
     font-weight: 800;
     color: rgb(63,81,181);
 }
 .tabpost hr{
-    border-top: 0.5px solid rgb(174, 195, 255);
-    margin: 6px 0px -3px 0px;
+    border: 0.5px solid rgb(174, 195, 255);
+    margin: 6px 0px 0px 2px;
+}
+.rp-post {
+    margin: 18px 0px 6px 3px;
+    border: 1px solid #3f51b5;
+    background-color: #3f51b5;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: 500;
+    width:268px;
+    display: inline-flex;
+    flex-direction: row;
+}
+.post {
+    color: #3f51b5;
+    background-color: white;
+    padding: 12px;
+    width: 50%;
+    text-align: center;
+}
+.post-filter {
+    background-color: #3f51b5;
+    color: white;
+}
+.tabpost-card1 {
+    height: 80px;
+    margin-top: 14px;
+    margin-left: 2px;
+    display: flex;
+    flex-direction: row;
+}
+.tabpost-card1 .content {
+    width: 155px;
+    margin-left: 14px;
+    margin-top: -3px;
+}
+.tabpost-card1 .content .date {
+    font-family: 'Open Sans';
+    font-size: 12px;
+    width: 155px;
+}
+.tabpost-card1 .content .text {
+    font-family: 'Open Sans';
+    font-size: 14px;
+    font-weight: 700;
+    width: 155px;
+    margin-top: 3px;
+    letter-spacing: 0.5px;
+}
+.tabpost-comment {
+    float: right;
+    margin-top: -16px;
+}
+.tabpost-commenticon{
+    font-size: 15px;
+    vertical-align:sub;
+    margin-right:2px;
+    color: #3f51b5;
+}
+.tabpost .card-hr {
+    border: 0.5px solid #ebeae9;
+    margin-top: 15px;
+}
+.tags{
+    margin: 47px 0px 0px 40px; 
+    font-size: 18px;
+    font-weight: 800;
+    color: rgb(63,81,181);
+}
+.tags hr{
+    border: 0.5px solid rgb(174, 195, 255);
+    margin: 6px 0px 0px 2px;
+}
+.tag-container{
+    width: 270px;
+    margin-top: 20px;
+}
+.tag-container div{
+    display: inline-block;
+    font-family: 'Open Sans';
+    color: black;
+    font-size: 14px;
+    letter-spacing: 0.2px;
+    background-color: rgb(238,238,238);
+    border-radius: 5px;
+    padding: 3px 16px 6px;
+    font-weight: 600;
+    margin: 0px 5px 12px 0px;
+}
+.f-img1{
+    background-image: url("images/img21.jpg");
+    height:240px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+}
+.f-img2{
+    background-image: url("images/img22.jpg");
+    height:200px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    place-items: center;
+}
+.f-img2-text{
+    width:1170px;
+}
+.sub{
+    display:inline-block;
+    color: white;
+    font-size: 42px;
+    font-weight: 900;
+    letter-spacing: 1.2px;
+    margin: -5px 0px 0px -2px;
+}
+.Email-input{
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 25px;
+    width: 270px;
+    font-family: 'Open Sans';
+    font-size: 16px;
+    padding:10px 18px 12px;
+    border: 1px solid #747577;
+    margin: 0px 26px 0px 32px;
+    vertical-align: super;
+}
+.f-subscribe{
+    background-color: rgb(48, 63, 159);
+    border-style: none;
+    padding: 12px 31px 12px;
+    font-size: 17px;
+    color: #ffffff;
+    border-radius: 25px;
+    letter-spacing: 0.5px;
+    font-weight: 500;
+    vertical-align: super;
 }
