--- a/abc.css
+++ b/abc.css
@@ -1,6 +1,7 @@
 body {
     margin:0;padding:0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 *{
     font-family: 'Montserrat';
@@ -301,7 +302,8 @@ a {
 .text2 {
     width: 1171px;
     height: 2307px;
-    margin-top: 30px;
+    margin-top: 28px;
+    position :relative;
 }
 .main-left {
     width: 822px;
@@ -311,10 +313,9 @@ a {
 }
 .main-right {
     position: absolute;
-    left:965px;
-    width:30%;
+    left:861px;
+    width:100%;
     float: right;
-    /*width: 312px;*/
     height: 2309px;
     background-color: white;
     border-top-left-radius: 5px;
@@ -411,6 +412,7 @@ a {
 }
 .author-text-dt {
     font-size: 12px;
+    padding-top: 8px;
     color: rgb(170,170,170);
     letter-spacing:0.5px;
     font-weight: 600;
@@ -921,7 +923,7 @@ a {
     color: white;
     font-size:16px;
     border-radius: 25px;
-    margin-left:4px;
+    margin-right:4px;
 }
 .f{
     padding: 10px 13px;
@@ -1041,7 +1043,7 @@ a {
     width: 270px;
     margin-top: 20px;
 }
-.tag-container div{
+.tag-container a{
     display: inline-block;
     font-family: 'Open Sans';
     color: black;
@@ -1189,7 +1191,7 @@ a {
     display:flex;
     flex-direction: row;
 }
-.tw-card .tw-card1 #tw-text{
+.tw-card .tw-card1 .tw-text{
     font-family: 'Open Sans';
     font-size: 14px;
     color: #bdbdbd;
